--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="src\assets\favicon.ico"
+      href="src/assets/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="icon" href="src\assets\favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="src/assets/favicon.ico" type="image/x-icon" />
     <title>TS · Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
